<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/happy_color"
    android:padding="16dp">

    <ImageView
        android:id="@+id/face_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_capture" />

    <TextView
        android:id="@+id/emotion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintStart_toEndOf="@id/face_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Angry" />

    <Button
        android:layout_width="0dp"
        android:id="@+id/help_button"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@id/face_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/what_emotion_is_it"
        android:textColor="#e82592"
        android:background="@drawable/help_bg"
        app:layout_constraintTop_toTopOf="@id/right_button"
        app:layout_constraintBottom_toBottomOf="@id/wrong_button"
        android:drawableEnd="@drawable/ic_help"
        />


    <Button
        android:id="@+id/right_button"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_height="40dp"
        android:paddingEnd="16dp"
        android:visibility="gone"
        android:paddingStart="16dp"
        android:textColor="@color/right_green"
        android:drawableEnd="@drawable/ic_right"
        android:layout_marginEnd="8dp"
        android:background="@drawable/right_bg"
        android:text="@string/right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/wrong_button"
        app:layout_constraintStart_toEndOf="@id/face_image" />


    <Button
        android:id="@+id/wrong_button"
        android:layout_width="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:layout_height="40dp"
        android:drawableEnd="@drawable/ic_wrong"
        android:visibility="gone"
        android:text="@string/wrong"
        android:textColor="@color/wrong_red"
        android:background="@drawable/wrong_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/right_button" />


</androidx.constraintlayout.widget.ConstraintLayout>