<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Camera2Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#949494"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                android:text="@string/take_image"
                android:textAllCaps="true"
                android:textColor="#94ffffff"
                android:textSize="19sp" />

            <ImageView
                android:id="@+id/option_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_option" />

            <ImageView
                android:id="@+id/camera2_flash_toggle_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="32dp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:src="@drawable/ic_flash_auto_black_24dp" />
        </RelativeLayout>


        <io.budge.emodetect.ui.camera.CustomTextureView
            android:id="@+id/camera_preview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:background="#4d4d4d"
            app:layout_constraintBottom_toTopOf="@+id/view_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="272dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:gravity="center"
                android:text="@string/tap_the_blue_button_to_capture_image"
                android:textColor="#94ffffff"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/camera_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_front_camera"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toStartOf="@+id/capture_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/capture_image" />

            <ImageView
                android:id="@+id/capture_image"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginBottom="46dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_capture" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/photo_gallery"
                app:layout_constraintStart_toEndOf="@id/capture_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_photo_library"
                app:layout_constraintTop_toTopOf="@id/capture_image"
                app:layout_constraintBottom_toBottomOf="@id/capture_image"/>


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/capture_image" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_id"
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>